# my-tasks-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  celery.dockerfile  pyproject.toml
migrations/: env.py  metadata.py
migrations/versions/: 03993886aba4_rename_periodictasks_to_.py  c4778b8a1da9_init.py  ef6eee2117ad_remove_user.py
scripts/: celery-start.sh  start.sh
src/: celery_app.py  celery_config.py  main.py  schedulers.py  schedules.py  tasks.py  tz_crontab.py
src/api/: auth.py  clocked_schedules.py  crontab_schedules.py  deps.py  interval_schedules.py  periodic_tasks.py  router.py  solar_schedules.py
src/config/: __init__.py
src/infra/: db_listen.py  security.py  session.py
src/infra/libs/sa/: timezone.py
src/infra/repo/: __init__.py  base.py  repo.py  user.py
src/libs/sa/: timezone.py
src/models/: __init__.py  mapper.py  models.py  user.py
src/schemas/: __init__.py  auth.py  user.py
src/utils/: __init__.py  crontab_validators.py  timezone.py
