[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "MyTasks"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.4.3"
celery = "^5.0.5"
fastapi = "^0.63.0"
psycopg2-binary = "^2.8.6"
pydantic = "^1.7.3"
python = "^3.9"
python-crontab = "^2.5.1"
redis = "^3.5.3"
sqlalchemy = "1.4.0b1"
uvicorn = "^0.13.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
devtools = "^0.6.1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"

[tool.black]
line-length = 88

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
