[tool.poetry]
authors = ["shoor <shoorday@outlook.com>"]
description = ""
name = "my-tasks"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.7.5"
celery = "^5.2.1"
email-validator = "^1.1.3"
fastapi = "^0.67.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
psycopg2-binary = "^2.9.2"
pydantic = { version = "^1.8.2", extras = ["dotenv"] }
python = "^3.10"
python-crontab = "^2.6.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
python-multipart = "^0.0.5"
redis = "^3.5.3"
sqlalchemy = "^1.4.28"
uvicorn = "^0.15.0"

[tool.poetry.group.dev.dependencies]
black = "^21.6b0"
devtools = "^0.6.1"
flake8 = "^3.9.2"
isort = "^5.9.1"
mypy = "^0.910"
sqlalchemy2-stubs = "^0.0.2-alpha.19"

[tool.black]
line-length = 88

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
